<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degrade"
    tools:context=".Activities.MainActivity"
>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="177dp"
        android:layout_height="166dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/turismo"
    />

    <EditText
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:autofillHints="@string/email"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
    />


    <EditText
        android:id="@+id/Senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/senha"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
    />

    <Button
        android:id="@+id/butLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Senha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:padding="10dp"
        android:text="@string/Login"
    />

    <Button
        android:id="@+id/butCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/butLogin"
        android:layout_centerHorizontal="true"
        android:background="@color/backtran"
        android:text="@string/Create"
        android:textColor="@color/darkblue"
    />

</RelativeLayout>